load("@contrib_rules_jvm//java:defs.bzl", "java_binary")
load("//tools-bazel:copy_system_test_jars.bzl", "conditional_copy_dep_jars")
load("//tools-bazel:library_wrappers.bzl", "java_export", "java_library", "jvm_junit_test_suite")
load("//tools-bazel:message_generator.bzl", "message_generator")
load(":generated_test_args.bzl", "per_test_args")

message_generator(
    name = "generated",
    srcs = glob(["src/main/resources/common/message/*.json"]),
    args = [
        "-p",
        "org.apache.kafka.streams.internals.generated",
        "-o",
        "generated/srcs",
        "-i",
        "streams/src/main/resources/common/message",
        "-m",
        "MessageDataGenerator",
    ],
)

java_export(
    name = "streams",
    srcs = glob(["src/main/**/*.java"]) + [":generated"],
    classifier_artifacts = {
        "test": ":streams-test-jar",
    },
    enable_test_jar_copy = True,
    maven_coordinates = "org.apache.kafka:kafka-streams:$(maven_version)",
    resources = glob(["src/main/resources/**/*"]) + ["//:streams_version_file"],
    runtime_deps_exclude = [
        "//clients",
        "@maven//:org_rocksdb_rocksdbjni",
    ],
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:org_rocksdb_rocksdbjni",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "streams-test-jar",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    deps = [
        ":streams",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//core",
        "//core:scala-server-utils-test-utils",
        "//dependencies:easymock",
        "//dependencies:mockito_core",
        "//dependencies:mockito_junit_jupiter",
        "//group-coordinator",
        "//server:server-project",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "//streams/test-utils",
        "//tools",
        "//transaction-coordinator:transaction-coordinator-project",
        "@io_bazel_rules_scala_scala_library//jar",
        "@maven//:ch_qos_reload4j_reload4j",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_suite_api",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_rocksdb_rocksdbjni",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

conditional_copy_dep_jars(
    name = "copy-streams-dep-jars",
    include_scala_version = True,
    libs_target = ":streams",
    libs_target_exclude_list = ["//clients"],
    output_directory = "dependant-libs",
)

java_binary(
    name = "StreamsConfig",
    main_class = "org.apache.kafka.streams.StreamsConfig",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":streams",
        "@maven//:org_slf4j_slf4j_nop",
    ],
)

EMPTY_SRCS = [
    "src/test/java/org/apache/kafka/streams/processor/internals/TimestampedKeyValueStoreMaterializerTest.java",
]

jvm_junit_test_suite(
    name = "streams-tests",
    srcs = glob(
        ["src/test/**/*.java"],
        exclude = EMPTY_SRCS,
    ),
    additional_library_srcs = [
        "src/test/java/org/apache/kafka/streams/processor/internals/RecordCollectorTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/StreamsPartitionAssignorTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/TaskManagerTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/assignment/LegacyStickyTaskAssignorTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/assignment/TaskAssignmentUtilsTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/metrics/TaskMetricsTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/BufferValueTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/CompositeReadOnlyKeyValueStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/CompositeReadOnlySessionStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/CompositeReadOnlyWindowStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/GlobalStateStoreProviderTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/InMemoryTimeOrderedKeyValueChangeBufferTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/RocksDBStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/StreamThreadStateStoreProviderTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/ThreadCacheTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/TimeOrderedKeyValueBufferTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/WrappingStoreProviderTest.java",
        "src/test/java/org/apache/kafka/streams/tests/RelationalSmokeTest.java",
        "src/test/java/org/apache/kafka/streams/tests/ShutdownDeadlockTest.java",
        "src/test/java/org/apache/kafka/streams/tests/StreamsUpgradeTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/KTableKTableForeignKeyJoinScenarioTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/SuppressScenarioTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/SuppressTopologyTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/CombinedKeySchemaTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/ResponseJoinProcessorSupplierTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/SubscriptionJoinProcessorSupplierTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/SubscriptionReceiveProcessorSupplierTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/SubscriptionResponseWrapperSerdeTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/SubscriptionSendProcessorSupplierTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/foreignkeyjoin/SubscriptionWrapperSerdeTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/suppress/KTableSuppressProcessorMetricsTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/suppress/KTableSuppressProcessorTest.java",
        "src/test/java/org/apache/kafka/streams/processor/TimestampExtractorTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/GlobalStateTaskTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/StandbyTaskTest.java",
        "src/test/java/org/apache/kafka/streams/processor/internals/StreamTaskTest.java",
        "src/test/java/org/apache/kafka/streams/integration/SuppressionIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/SuppressedTest.java",
        "src/test/java/org/apache/kafka/streams/kstream/internals/FullChangeSerdeTest.java",
        "src/test/java/org/apache/kafka/streams/integration/SuppressionDurabilityIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/KafkaStreamsTest.java",
        "src/test/java/org/apache/kafka/streams/integration/KTableKTableForeignKeyInnerJoinMultiIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/KTableKTableForeignKeyJoinIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/KTableKTableForeignKeyJoinMaterializationIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/AbstractJoinIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/AbstractResetIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/StandbyTaskCreationIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/integration/QueryableStateIntegrationTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractKeyValueStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractDualSchemaRocksDBSegmentedBytesStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractRocksDBSegmentedBytesStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractSessionBytesStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractWindowBytesStoreTest.java",
        "src/test/java/org/apache/kafka/streams/state/internals/AbstractRocksDBWindowStoreTest.java",
    ],
    per_test_args = per_test_args,
    prefixes = ["src/test/java/"],
    resources = glob(["src/test/resources/**/*"]),
    tags = ["no-java-spotbugs"],
    visibility = ["//visibility:public"],
    runtime_deps = [
        "@maven//:ch_qos_reload4j_reload4j",
        "@maven//:org_bouncycastle_bcpkix_jdk18on",
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_reload4j",
    ],
    deps = [
        ":streams",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//core",
        "//core:scala-server-utils-test-utils",
        "//dependencies:easymock",
        "//dependencies:mockito_core",
        "//dependencies:mockito_junit_jupiter",
        "//group-coordinator",
        "//server",
        "//server-common",
        "//server-common:server-common-tests-test-lib",
        "//storage",
        "//streams/test-utils",
        "//tools",
        "//transaction-coordinator:transaction-coordinator-project",
        "@io_bazel_rules_scala_scala_library//jar",
        "@maven//:ch_qos_reload4j_reload4j",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:junit_junit",
        "@maven//:org_hamcrest_hamcrest",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_junit_jupiter_junit_jupiter_params",
        "@maven//:org_junit_platform_junit_platform_suite_api",
        "@maven//:org_junit_platform_junit_platform_suite_engine",
        "@maven//:org_rocksdb_rocksdbjni",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_slf4j_slf4j_reload4j",
    ],
)
