load("//tools-bazel:copy_system_test_jars.bzl", "conditional_copy_dep_jars")
load("//tools-bazel:library_wrappers.bzl", "java_export", "java_library", "jvm_junit_test_suite")
load(":generated_test_args.bzl", "per_test_args")

java_export(
    name = "file",
    srcs = glob(["src/main/**/*.java"]),
    classifier_artifacts = {
        "test": ":file-test-jar",
    },
    maven_coordinates = "org.apache.kafka:connect-file:$(maven_version)",
    resources = glob(["src/main/resources/**"]),
    tags = ["no-javadocs"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//clients",
        "//connect/api",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_library(
    name = "file-test-jar",
    srcs = glob(["src/test/java/**/*.java"]),
    resources = glob(["src/test/resources/**/*"]),
    tags = [
        "no-java-checkstyle",
        "no-java-spotbugs",
    ],
    deps = [
        ":file",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//connect/api",
        "//connect/runtime",
        "//connect/runtime:runtime-tests-test-lib",
        "//dependencies:mockito_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_reload4j",
    ],
)

conditional_copy_dep_jars(
    name = "copy-connect-file-dep-jars",
    libs_target = ":file",
    libs_target_exclude_list = [
        "//clients",
        "@maven//:org_bouncycastle_bcpkix_jdk18on",
        "@maven//:org_bouncycastle_bcprov_jdk18on",
        "@maven//:org_bouncycastle_bcutil_jdk18on",
        "@maven//:org_bouncycastle_bc_fips",
        "//connect/api",
    ],
    output_directory = "dependant-libs",
    testlibs_target = [":file-test-jar"],
    testlibs_target_exclude_list = [
        "@maven//:org_bouncycastle_bcpkix_jdk18on",
        "@maven//:org_bouncycastle_bcprov_jdk18on",
        "@maven//:org_bouncycastle_bcutil_jdk18on",
        "@maven//:org_bouncycastle_bc_fips",
    ],
    testlibs_target_include_list = [
        "@maven//:ch_qos_reload4j_reload4j",
    ],
)

jvm_junit_test_suite(
    name = "file-tests",
    srcs = glob(["src/test/**/*.java"]),
    per_test_args = per_test_args,
    resources = glob(["src/test/resources/**"]),
    tags = ["no-java-spotbugs"],
    runtime_deps = [
        "@maven//:org_junit_jupiter_junit_jupiter_engine",
        "@maven//:org_junit_platform_junit_platform_launcher",
        "@maven//:org_junit_platform_junit_platform_reporting",
    ],
    deps = [
        ":file",
        "//clients",
        "//clients:clients-tests-test-lib",
        "//connect/api",
        "//connect/runtime",
        "//connect/runtime:runtime-tests-test-lib",
        "//dependencies:mockito_core",
        "@maven//:io_dropwizard_metrics_metrics_core",
        "@maven//:org_junit_jupiter_junit_jupiter_api",
        "@maven//:org_slf4j_slf4j_reload4j",
    ],
)
